--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,19 @@
 .c-link{
   cursor: pointer;
 }
+.start-page{
+  font-size: 30px;
+  height: 300px;
+  line-height: 300px;
+  color: #ccc;
+  text-align: center;
+}
+.left-panel{
+  min-height: 100vh;
+  position: relative;
+}
+.left-panel .btns-group{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
