完善控制栏，修复部分已知问题

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   line-height: 300px;
   color: #ccc;
   text-align: center;
+  user-select: none;
 }
 .left-panel{
   min-height: 100vh;
@@ -22,3 +23,20 @@
   width: 100%;
   bottom: 0;
 }
+::-webkit-scrollbar {
+  width:12px;
+  }
+  /* 滚动槽 */
+  ::-webkit-scrollbar-track {
+  -webkit-box-shadow:inset006pxrgba(0,0,0,0.3);
+  border-radius:10px;
+  }
+  /* 滚动条滑块 */
+  ::-webkit-scrollbar-thumb {
+  border-radius:10px;
+  background:rgba(0,0,0,0.1);
+  -webkit-box-shadow:inset006pxrgba(0,0,0,0.5);
+  }
+  ::-webkit-scrollbar-thumb:window-inactive {
+  background:rgba(106, 145, 201, 0.4);
+  }
