--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@
   border: none;
   color: inherit;
 }
-.c-link{
+
+.c-link {
   cursor: pointer;
 }
-.start-page{
+
+.start-page {
   font-size: 30px;
   height: 300px;
   line-height: 300px;
@@ -14,29 +16,51 @@
   text-align: center;
   user-select: none;
 }
-.left-panel{
+
+.left-panel {
   min-height: 100vh;
   position: relative;
 }
-.left-panel .btns-group{
+
+.left-panel .btns-group {
   position: absolute;
   width: 100%;
   bottom: 0;
 }
+
+.right-panel {
+  position: relative;
+}
+
+.sync-status {
+  position: absolute;
+  left: 8px;
+  bottom: 8px;
+  color: rgb(142, 159, 228);
+  font-size: 12px;
+}
+
+.CodeMirror-scroll {
+  height: 328px !important
+}
+
 ::-webkit-scrollbar {
-  width:12px;
-  }
-  /* 滚动槽 */
-  ::-webkit-scrollbar-track {
-  -webkit-box-shadow:inset006pxrgba(0,0,0,0.3);
-  border-radius:10px;
-  }
-  /* 滚动条滑块 */
-  ::-webkit-scrollbar-thumb {
-  border-radius:10px;
-  background:rgba(0,0,0,0.1);
-  -webkit-box-shadow:inset006pxrgba(0,0,0,0.5);
-  }
-  ::-webkit-scrollbar-thumb:window-inactive {
-  background:rgba(106, 145, 201, 0.4);
-  }
+  width: 12px;
+}
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset006pxrgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset006pxrgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(106, 145, 201, 0.4);
+}
